; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_properties_add_text.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_properties_add_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_property = type { i32 }
%struct.text_data = type { i32 }

@OBS_PROPERTY_TEXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.obs_property* @obs_properties_add_text(i32* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.obs_property*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.obs_property*, align 8
  %11 = alloca %struct.text_data*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %4
  %15 = load i32*, i32** %6, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = call i64 @has_prop(i32* %15, i8* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %14, %4
  store %struct.obs_property* null, %struct.obs_property** %5, align 8
  br label %32

20:                                               ; preds = %14
  %21 = load i32*, i32** %6, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = load i8*, i8** %8, align 8
  %24 = load i32, i32* @OBS_PROPERTY_TEXT, align 4
  %25 = call %struct.obs_property* @new_prop(i32* %21, i8* %22, i8* %23, i32 %24)
  store %struct.obs_property* %25, %struct.obs_property** %10, align 8
  %26 = load %struct.obs_property*, %struct.obs_property** %10, align 8
  %27 = call %struct.text_data* @get_property_data(%struct.obs_property* %26)
  store %struct.text_data* %27, %struct.text_data** %11, align 8
  %28 = load i32, i32* %9, align 4
  %29 = load %struct.text_data*, %struct.text_data** %11, align 8
  %30 = getelementptr inbounds %struct.text_data, %struct.text_data* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  %31 = load %struct.obs_property*, %struct.obs_property** %10, align 8
  store %struct.obs_property* %31, %struct.obs_property** %5, align 8
  br label %32

32:                                               ; preds = %20, %19
  %33 = load %struct.obs_property*, %struct.obs_property** %5, align 8
  ret %struct.obs_property* %33
}

declare dso_local i64 @has_prop(i32*, i8*) #1

declare dso_local %struct.obs_property* @new_prop(i32*, i8*, i8*, i32) #1

declare dso_local %struct.text_data* @get_property_data(%struct.obs_property*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
